--- a/css/tooplate-simply-amazed.css
+++ b/css/tooplate-simply-amazed.css
@@ -602,8 +602,8 @@ textarea.form-control {
 }
 
 .section {
-  height: 100vh;
-  min-height: 700px;
+  /*height: 100vh;
+  min-height: 700px;*/
   display: flex;
   align-items: center;
 }
